# example-package-for-testing

./: .gitignore  README.md  changelog.md  pyproject.toml
src/example_package_for_testing/: rescale.py
test/: test_rescale.py
